@@ -13,9 +13,11 @@ github_user        = hinrik
 git_tag_message    = CPAN release %v
 
 [Prereq / Runtime]
-perl                      = 5.008
-POE                       = 1.289
-POE::Wheel::Run           = 0
+perl            = 5.008
+POE             = 1.289
+POE::Session    = 0
+POE::Wheel::Run = 0
 
 [Prereq / Test]
-Test::More                = 0.47
+Test::More      = 0.47
+Capture::Tiny   = 0.07
