@@ -4,6 +4,9 @@ Revision history for POE-Quickie
     - Renamed CopyINC to AltFork (like POE::Component::Generic and other
       modules call this feature) and made it croak if used on Win32
     - Make sure we have reaped the child process before we emit ExitEvent
+    - Added an Capture::Tiny-like interface which "blocks" (while running
+      other POE code) while executing programs
+    - Replaced the shutdown() method with killall()
 
 0.01  Wed Jun 23 13:30:10 GMT 2010
     - Initial release
